# rveplas

./: 8hexaele.rve  CMakeLists.txt  README.md
pardisolib/: pardiso.lic
src/: ELEMENTS.INC  GLBDBASE.INC  MATERIAL.INC  MAXDIM.INC  RVE.INC  hyplas.f
src/CRYSTAL/: cstpds.f  orpdsc.f  rdpdsc.f  supdsc.f  swpdsc.f
src/CRYSTAL_ELASTO_MARTEN/: chktrn.f  cstmep.f  cstvcp.f  dtadfe.f  ormepc.f  rdmepc.f  sumepc.f  suvcpl.f  swmepc.f  taumep.f
src/CRYSTAL_VISCO/: cstvs2.f  orvsc2.f  rdvsc2.f  suvsc2.f  swvsc2.f
src/CRYSTAL_VISCO_MARTEN/: cstmtc.f  ormtsc.f  rdmtsc.f  sumtsc.f  suvsc2mod.f  swmtsc.f
src/DAMAGE/: ctdama.f  ordama.f  rddama.f  sudama.f  swdama.f
src/DAMAGED_ELASTIC/: ctdmel.f  ordmel.f  rddmel.f  sudmel.f  swdmel.f
src/DRUCKER_PRAGER/: ctdp.f  ctdp3d.f  ctdpd.f  ordp.f  rddp.f  sudp.f  sudp3d.f  swdp.f
src/ELASTIC/: ctel.f  orel.f  rdel.f  suel.f  swel.f  tuel.f
src/ELEMENTS/: chkndb.f  eleiif.f  eleist.f  exh8.f  exh8fb.f  exq4.f  exq4fb.f  exq8.f  ext3.f  ext6.f  ext7.f  extnod.f  gaus1d.f  gaus2d.f  gaus3d.f  iffba.f  ifstd.f  jacdet.f  rsh8.f  rsh8fb.f  rsq4.f  rsq4fb.f  rsq8.f  rst3.f  rst6.f  rst7.f  sfh8.f  sfh8fb.f  sfq4.f  sfq4fb.f  sfq8.f  sft3.f  sft6.f  sft7.f  sft7e.f  shpfun.f  stfba.f  ststd.f
src/GENERAL/: algor.f  arclen.f  arrgax.f  arrgo2.f  arrgo3.f  atasym.f  atmdfb.f  atsym.f  betria.f  check2.f  conver.f  cstep.f  defgra.f  errprt.f  fclose.f  fndkey.f  fopen.f  getbmx.f  getgco.f  getgmx.f  greet.f  increm.f  indata.f  inincr.f  initia.f  inload.f  intfor.f  intnum.f  invf.f  ivzero.f  leftcg.f  length.f  listra.f  logstr.f  nfunc.f  nodave.f  nword.f  output.f  pexit.f  princ2.f  (+15 more)
src/MATERIALS/: matict.f  matior.f  matird.f  matisu.f  matisw.f
src/MATHS/: ddlgd2.f  detm23.f  dexpmp.f  (+23 more)
(+47 files in other folders)
